# custom_notification_app

./: README.md  pyproject.toml
custom_notification_app/: hooks.py
custom_notification_app/fixtures/: custom_field.json
custom_notification_app/public/js/: custom_notification_app.js
custom_notification_app/public/js/custom_doctype_js/: notification_settings.js
custom_notification_app/translations/: ar.csv
